# oodle-safe

./: Cargo.toml  LICENSE  README.md
src/: constants.rs  lib.rs  tests.rs
