[package]
name = "oodle-safe"
version = "0.1.0"
authors = ["Youn Mélois <youn@melois.dev>"]
edition = "2021"
description = "Safe low-level bindings for the oodle compression library."
readme = "README.md"
repository = "https://github.com/sehnryr/oodle-safe"
license = "MIT"
keywords = ["oodle", "compression"]
categories = ["compression", "bindings"]

[dependencies]
oodle-sys = "0.1.0"

[features]
bindgen = ["oodle-sys/bindgen"]
